# InfiniteSenseSDK2.0

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  README_zh_CN.md
.github/workflows/: cmake-single-platform.yml
assets/: board_config.md  board_introduction.md  data_info.md  firmware_config.md
assets/doc/: board_config.md  board_introduction.md  connection_config.md  data_info.md  firmware.md  hardware_intro.md  run_demo.md
example/: CMakeLists.txt
example/CustomCam/: CMakeLists.txt  cus_cam.cpp  cus_cam.h  main.cpp
example/GigeCam/: CMakeLists.txt  main.cpp  main_ros.cpp  main_ros2.cpp  mv_cam.cpp  mv_cam.h  mvcam.cpp  mvcam.h  package.xml
example/ZMQ/: CMakeLists.txt  zmq_main.cpp
firmware/: SDK2_FIRMWARE_2025-3-20.uf2  SDK2_FIRMWARE_2025-4-26.uf2  SDK2_FIRMWARE_2025-4-27.uf2  SDK2_FIRMWARE_2025-5-13.uf2  SDK2_FIRMWARE_2025-5-29.uf2  SDK2_FIRMWARE_2025-6-08.uf2  SDK2_FIRMWARE_2025-6-7.uf2  SDK2_FIRMWARE_2025-6-8.elf
infinite_sense_core/: CMakeLists.txt
infinite_sense_core/include/: cam.h  cam_manager.h  config.h  data.h  image.h  infinite_sense.h  messenger.h  net.h  ptp.h  sensor.h  ser.h  serial_manager.h  trigger.h  usb.h
infinite_sense_core/src/: cam.cpp  cam_manager.cpp  image.cpp  infinite_sense.cpp  messenger.cpp  net.cpp  net_manager.cpp  ptp.cpp  sensor.h  ser.cpp  serial.cpp  serial_manager.cpp  trigger.cpp  trigger_manager.cpp  usb.cpp
src/: CMakeLists.txt  main.cpp
src/config/: config.json
src/devices/: list.md
src/devices/mv_cam/: CMakeLists.txt
src/devices/mv_cam/include/: mv_camera.h
src/devices/mv_cam/src/: mv_camera.cpp
src/examples/: mv_camera.cpp
src/infinite_sense_core/: CMakeLists.txt
src/infinite_sense_core/include/: infinite_sense.h  log.h  net_manager.h  sensor.h  serial_manager.h
src/infinite_sense_core/python/: CMakeLists.txt  my_module.cpp
src/infinite_sense_core/src/: infinite_sense.cpp  net_manager.cpp  serial_manager.cpp
tools/: CMakeLists.txt
tools/monitor/: CMakeLists.txt
tools/topic_monitor/: monitor.cpp  monitor.h
